--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -267,9 +267,9 @@
           <form id="add-form" class="add-form">
             <div class="form-group">
               <label class="form-label" for="repo">Repository</label>
-              <input id="repo" class="form-input" type="text" placeholder="owner/repo-name"
-                required pattern="[A-Za-z0-9_.\-]+/[A-Za-z0-9_.\-]+" />
-              <span class="form-hint">e.g. <code>facebook/react</code></span>
+              <input id="repo" class="form-input" type="text" placeholder="owner/repo-name or GitHub URL"
+                required />
+              <span class="form-hint">e.g. <code>facebook/react</code> or <code>https://github.com/facebook/react</code></span>
             </div>
             <div class="form-group">
               <label class="form-label" for="label">Label <span class="badge-regex">regex</span></label>
@@ -278,8 +278,8 @@
               <div class="label-presets">
                 <span class="label-presets__hint">Quick picks:</span>
                 <button type="button" class="label-preset-btn" data-label="bug">bug</button>
-                <button type="button" class="label-preset-btn" data-label="good first issue">good first issue</button>
-                <button type="button" class="label-preset-btn" data-label="help wanted">help wanted</button>
+                <button type="button" class="label-preset-btn" data-label="good.first.issue">good first issue</button>
+                <button type="button" class="label-preset-btn" data-label="help.wanted">help wanted</button>
                 <button type="button" class="label-preset-btn" data-label="enhancement">enhancement</button>
                 <button type="button" class="label-preset-btn" data-label="documentation">documentation</button>
               </div>
